crates/core/tests/snapshots/snapshots__binary_interpretation.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 262
expression: "&result.interpretation"
---
{
  "value": {
    "type": "Bytes",
    "value": [
      255
    ]
  },
  "source_format": "binary",
  "confidence": 0.95,
  "description": "8 bits (0b prefix)"
}
