crates/core/tests/snapshots/snapshots__color_hex_interpretation.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 81
expression: "&result.interpretation"
---
{
  "value": {
    "type": "Bytes",
    "value": [
      255,
      85,
      0
    ]
  },
  "source_format": "color-hex",
  "confidence": 0.95,
  "description": "RGB: RGB(255, 85, 0) / HSL(20°, 100%, 50%)",
  "rich_display": [
    {
      "preferred": {
        "type": "Color",
        "r": 255,
        "g": 85,
        "b": 0,
        "a": 255
      }
    }
  ]
}
