crates/core/tests/snapshots/snapshots__datasize_interpretation.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 192
expression: "&result.interpretation"
---
{
  "value": {
    "type": "Int",
    "value": {
      "value": 1024
    }
  },
  "source_format": "datasize",
  "confidence": 0.9,
  "description": "1024 bytes = 1,024 bytes (decimal)",
  "rich_display": [
    {
      "preferred": {
        "type": "DataSize",
        "bytes": 1024,
        "human": "1 KiB"
      }
    }
  ]
}
